# UdemyCmake

./: .gitmodules
4_KM_Project/: CMakeLists.txt
4_KM_Project/app/: CMakeLists.txt  main.cc
4_KM_Project/cmake/: AddGitSubmodule.cmake  Sanitizer.cmake  Warnings.cmake
4_KM_Project/configured/: config.hpp.in
4_KM_Project/src/my_lib/: CMakeLists.txt  my_lib.cc
4_KM_Project/tests/: CMakeLists.txt  main.cc
5_Tutorial/Exercises/: CMakeLists.txt  tutorial.cxx
